tests/baselines/reference/nonNull.errors.txt
tests/cases/conformance/types/nonNull/nonNull.ts(23,38): error TS2536: Type 'K' cannot be used to index type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(63,11): error TS2322: Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(69,11): error TS2322: Type 'T' is not assignable to type 'T!'.
  Type 'number | null' is not assignable to type 'T!'.
    Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(71,11): error TS2322: Type 'T' is not assignable to type 'number'.
  Type 'number | null' is not assignable to type 'number'.
    Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(74,5): error TS2322: Type '3' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(75,5): error TS2322: Type '3' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(82,11): error TS2322: Type 'A' is not assignable to type 'number'.
  Type 'number | null' is not assignable to type 'number'.
    Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(85,11): error TS2322: Type 'B' is not assignable to type '{ x: string; }'.
  Type '{ x: string; } | null' is not assignable to type '{ x: string; }'.
    Type 'null' is not assignable to type '{ x: string; }'.
tests/cases/conformance/types/nonNull/nonNull.ts(88,11): error TS2322: Type 'B' is not assignable to type '{ x?: string | undefined; }'.
  Type '{ x: string; } | null' is not assignable to type '{ x?: string | undefined; }'.
    Type 'null' is not assignable to type '{ x?: string | undefined; }'.
tests/cases/conformance/types/nonNull/nonNull.ts(91,11): error TS2322: Type 'B' is not assignable to type '{ x: number; }'.
  Type '{ x: string; } | null' is not assignable to type '{ x: number; }'.
    Type 'null' is not assignable to type '{ x: number; }'.
tests/cases/conformance/types/nonNull/nonNull.ts(92,11): error TS2322: Type 'B!' is not assignable to type '{ x: number; }'.
  Type '{ x: string; }' is not assignable to type '{ x: number; }'.
    Types of property 'x' are incompatible.
      Type 'string' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(100,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(103,11): error TS2322: Type 'T' is not assignable to type 'StrictMembers<T>'.
  Type 'T[K]' is not assignable to type 'T[K]!'.
    Type 'T[string]' is not assignable to type 'T[K]!'.
tests/cases/conformance/types/nonNull/nonNull.ts(104,11): error TS2322: Type 'T!' is not assignable to type 'StrictMembers<T>'.
  Type 'T![K]' is not assignable to type 'T[K]!'.
    Type 'T![string]' is not assignable to type 'T[K]!'.
tests/cases/conformance/types/nonNull/nonNull.ts(108,11): error TS2322: Type 'T' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(109,11): error TS2322: Type 'T!' is not assignable to type 'StrictMembers<T!>'.
  Type 'T![K]' is not assignable to type 'T![K]!'.
    Type 'T![string]' is not assignable to type 'T![K]!'.
tests/cases/conformance/types/nonNull/nonNull.ts(110,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'StrictMembers<T!>'.
  Type 'keyof T!' is not assignable to type 'keyof T'.
tests/cases/conformance/types/nonNull/nonNull.ts(118,11): error TS2322: Type 'T' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(120,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'IdMapped<T!>'.
  Type 'keyof T!' is not assignable to type 'keyof T'.
tests/cases/conformance/types/nonNull/nonNull.ts(131,11): error TS2322: Type 'StrictMembers<T>' is not assignable to type 'Partial<T!>'.
  Type 'keyof T!' is not assignable to type 'keyof T'.
tests/cases/conformance/types/nonNull/nonNull.ts(143,5): error TS2365: Operator '===' cannot be applied to types 'T!' and 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(151,5): error TS2365: Operator '===' cannot be applied to types 'StrictMembers<T>' and 'Partial<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(176,11): error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(177,11): error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(182,11): error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T!>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(183,11): error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T!>'.
  Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(203,11): error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(204,11): error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(205,11): error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(206,11): error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(211,11): error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(212,11): error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(213,11): error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(214,11): error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
  Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
tests/cases/conformance/types/nonNull/nonNull.ts(230,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(232,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
tests/cases/conformance/types/nonNull/nonNull.ts(244,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
tests/cases/conformance/types/nonNull/nonNull.ts(246,11): error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
tests/cases/conformance/types/nonNull/nonNull.ts(258,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(260,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(265,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
  Types of property 'a' are incompatible.
    Type 'number | null' is not assignable to type 'number'.
      Type 'null' is not assignable to type 'number'.
tests/cases/conformance/types/nonNull/nonNull.ts(267,11): error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(281,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T'.
      Type 'null' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(283,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(295,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(297,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(308,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(309,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(310,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(311,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(315,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(316,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(317,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(318,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(332,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T'.
      Type 'null' is not assignable to type 'T'.
tests/cases/conformance/types/nonNull/nonNull.ts(334,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(346,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(348,11): error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
tests/cases/conformance/types/nonNull/nonNull.ts(359,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
      Type 'number' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(360,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(361,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(362,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(366,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T' is not assignable to type 'T!'.
      Type 'number' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(367,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
  Types of property 'a' are incompatible.
    Type 'T | null' is not assignable to type 'T!'.
      Type 'null' is not assignable to type 'T!'.
tests/cases/conformance/types/nonNull/nonNull.ts(368,11): error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
tests/cases/conformance/types/nonNull/nonNull.ts(369,11): error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.


==== tests/cases/conformance/types/nonNull/nonNull.ts (66 errors) ====
    type NonNull<T> = T!
    type IndexNullable<T, K extends keyof T!> = T![K]
    type NonNullableMember<T, K extends keyof T> = T[K]!
    type StrictMembers<T> = { [K in keyof T]: T[K]! }
    
    type FlipFlop<T> = StrictMembers<Partial<StrictMembers<T>>>
    
    type HasKey<T, Key extends string> = (
      { [K in keyof T]: 'true' } &
      { [key: string]: 'false' }
    )[Key]
    
    type HasKindKey<T> = HasKey<T!, 'kind'>
    type MapHasKey<T, Key extends string> = {
        [K in keyof T]: HasKey<T[K]!, Key>
    }
    
    type KeyOfBang<T> = keyof T!
    
    type Strip1<T> = { [K in keyof T!]: T![K] }
    type Strip2<T> = { [K in keyof T!]: T![K]! }
    
    type Error1<T, K extends keyof T!> = T[K]
                                         ~~~~
!!! error TS2536: Type 'K' cannot be used to index type 'T'.
    
    type StupidButOK<T>  = { [K in keyof T]: T![K]  }
    type StupidButOK2<T> = { [K in keyof T]: T![K!] }
    
    type Obj = {
        x: number|null,
    
        z:   { kind: 'Just', value: string }
           | { kind: 'Nothing' }
           | undefined
    }
    
    type T1 = number!
    type T2 = (number|undefined)!
    type T3 = (number|null)!
    type T4 = NonNull<null|number>
    type T5 = NonNull<number|undefined>
    type T6 = NonNull<null>
    type T7 = NonNullableMember<Obj, 'x'>
    type T8 = IndexNullable<Obj|undefined, 'x'>
    type T9 = StrictMembers<Obj>
    type T10 = StrictMembers<Obj|undefined>
    type T11 = FlipFlop<Obj>
    type T12 = FlipFlop<number>
    type T13 = keyof (Obj|null)!
    type T14 = KeyOfBang<Obj|null>
    type T15 = Obj['z']!['kind']
    type T16 = MapHasKey<Obj, 'kind'>
    type T17 = Strip1<Obj>
    type T18 = Strip1<Obj|undefined>
    type T19 = Strip2<Obj|undefined>
    
    let a: string | undefined | null | never;
    let b: typeof a!;
    type Assert<T> = T!;
    let c: Assert<typeof a>;
    
    function assignability<T>(x: T, y: T!) {
        const a: T = y;
        const b: T! = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'T!'.
        const c: T! = y;
    }
    
    function assignability2<T extends number|null>(x: T, y: T!) {
        const a: T = y;
        const b: T! = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'T!'.
!!! error TS2322:   Type 'number | null' is not assignable to type 'T!'.
!!! error TS2322:     Type 'null' is not assignable to type 'T!'.
        const c: T! = y;
        const d: number = x;
              ~
!!! error TS2322: Type 'T' is not assignable to type 'number'.
!!! error TS2322:   Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:     Type 'null' is not assignable to type 'number'.
        const e: number = y;
    
        x = 3;
        ~
!!! error TS2322: Type '3' is not assignable to type 'T'.
        y = 3;
        ~
!!! error TS2322: Type '3' is not assignable to type 'T!'.
    }
    
    function assignability3<
        A extends number | null,
        B extends { x: string } | null
    >(a: A, aBang: A!, b: B, bBang: B!) {
        const v0: number = a;
              ~~
!!! error TS2322: Type 'A' is not assignable to type 'number'.
!!! error TS2322:   Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:     Type 'null' is not assignable to type 'number'.
        const v1: number = aBang;
    
        const v2: { x: string } = b;
              ~~
!!! error TS2322: Type 'B' is not assignable to type '{ x: string; }'.
!!! error TS2322:   Type '{ x: string; } | null' is not assignable to type '{ x: string; }'.
!!! error TS2322:     Type 'null' is not assignable to type '{ x: string; }'.
        const v3: { x: string } = bBang;
    
        const v4: { x?: string } = b;
              ~~
!!! error TS2322: Type 'B' is not assignable to type '{ x?: string | undefined; }'.
!!! error TS2322:   Type '{ x: string; } | null' is not assignable to type '{ x?: string | undefined; }'.
!!! error TS2322:     Type 'null' is not assignable to type '{ x?: string | undefined; }'.
        const v5: { x?: string } = bBang;
    
        const v6: { x: number } = b;
              ~~
!!! error TS2322: Type 'B' is not assignable to type '{ x: number; }'.
!!! error TS2322:   Type '{ x: string; } | null' is not assignable to type '{ x: number; }'.
!!! error TS2322:     Type 'null' is not assignable to type '{ x: number; }'.
        const v7: { x: number } = bBang;
              ~~
!!! error TS2322: Type 'B!' is not assignable to type '{ x: number; }'.
!!! error TS2322:   Type '{ x: string; }' is not assignable to type '{ x: number; }'.
!!! error TS2322:     Types of property 'x' are incompatible.
!!! error TS2322:       Type 'string' is not assignable to type 'number'.
    }
    
    type IdMapped<T> = { [K in keyof T]: T[K] }
    
    function mappedAssignability<T>(x: T, y: T!, z: StrictMembers<T>, w: StrictMembers<T!>) {
        const v01: T = z;
        const v02: T = w;
        const v03: T! = z;
              ~~~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'T!'.
        const v04: T! = w;
    
        const v05: StrictMembers<T> = x;
              ~~~
!!! error TS2322: Type 'T' is not assignable to type 'StrictMembers<T>'.
!!! error TS2322:   Type 'T[K]' is not assignable to type 'T[K]!'.
!!! error TS2322:     Type 'T[string]' is not assignable to type 'T[K]!'.
        const v06: StrictMembers<T> = y;
              ~~~
!!! error TS2322: Type 'T!' is not assignable to type 'StrictMembers<T>'.
!!! error TS2322:   Type 'T![K]' is not assignable to type 'T[K]!'.
!!! error TS2322:     Type 'T![string]' is not assignable to type 'T[K]!'.
        const v07: StrictMembers<T> = z;
        const v08: StrictMembers<T> = w;
    
        const v09: StrictMembers<T!> = x;
              ~~~
!!! error TS2322: Type 'T' is not assignable to type 'StrictMembers<T!>'.
        const v10: StrictMembers<T!> = y;
              ~~~
!!! error TS2322: Type 'T!' is not assignable to type 'StrictMembers<T!>'.
!!! error TS2322:   Type 'T![K]' is not assignable to type 'T![K]!'.
!!! error TS2322:     Type 'T![string]' is not assignable to type 'T![K]!'.
        const v11: StrictMembers<T!> = z;
              ~~~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'StrictMembers<T!>'.
!!! error TS2322:   Type 'keyof T!' is not assignable to type 'keyof T'.
        const v12: StrictMembers<T!> = w;
    
        const v13: IdMapped<T> = x;
        const v14: IdMapped<T> = y;
        const v15: IdMapped<T> = z;
        const v16: IdMapped<T> = w;
    
        const v17: IdMapped<T!> = x;
              ~~~
!!! error TS2322: Type 'T' is not assignable to type 'IdMapped<T!>'.
        const v18: IdMapped<T!> = y;
        const v19: IdMapped<T!> = z;
              ~~~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'IdMapped<T!>'.
!!! error TS2322:   Type 'keyof T!' is not assignable to type 'keyof T'.
        const v20: IdMapped<T!> = w;
    
        const v21: Partial<T> = x;
        const v22: Partial<T> = y;
        const v23: Partial<T> = z;
        const v24: Partial<T> = w;
    
        const v25: Partial<T!> = x; // FIXME: T ~ Partial<T!>;
                                    // T is inferred as {}, but the real type in strict mode actually is {} | null | undefined
        const v26: Partial<T!> = y;
        const v27: Partial<T!> = z;
              ~~~
!!! error TS2322: Type 'StrictMembers<T>' is not assignable to type 'Partial<T!>'.
!!! error TS2322:   Type 'keyof T!' is not assignable to type 'keyof T'.
        const v28: Partial<T!> = w;
    }
    
    function comparability<T>(x: T, y: T!, z: StrictMembers<T>, w: StrictMembers<T!>, p: Partial<T>, r: Partial<T!>) {
        x === y;
        x === z;
        x === w;
        x === p;
        x === r;
    
        y === y;
        y === z;  // FIXME T![K]  ~  T[K]!
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'T!' and 'StrictMembers<T>'.
        y === w;
        y === p;
        y === r;
    
        z === z;
        z === w;
        z === p;
        z === r;  // FIXME: same as y === z;
        ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'StrictMembers<T>' and 'Partial<T!>'.
    
        w === w;
        w === p;
        w === r;
    
        p === p;
        p === r;
    }
    
    function signatures(
        f1: <T>() => T,
        f2: <T>() => T!,
        f3: <T>() => IdMapped<T>,
        f4: <T>() => IdMapped<T!>,
        f5: <T>() => Partial<T>,
        f6: <T>() => Partial<T!>,
        f7: <T>() => StrictMembers<T>,
        f8: <T>() => StrictMembers<T!>
    ) {
        const g12: typeof f1 = f2;
    
        const g21: typeof f2 = f1;  // FIXME
    
        const g34: typeof f3 = f4;
        const g37: typeof f3 = f7;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
        const g38: typeof f3 = f8;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T>'.
    
        const g41: typeof f4 = f1;  // FIXME
        const g42: typeof f4 = f2;
        const g43: typeof f4 = f3;  // FIXME
        const g47: typeof f4 = f7;
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T>' is not assignable to type '<T>() => IdMapped<T!>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
        const g48: typeof f4 = f8;  // FIXME
              ~~~
!!! error TS2322: Type '<T>() => StrictMembers<T!>' is not assignable to type '<T>() => IdMapped<T!>'.
!!! error TS2322:   Type 'StrictMembers<{}>' is not assignable to type 'IdMapped<T!>'.
    
        const g51: typeof f5 = f1;
        const g52: typeof f5 = f2;
        const g53: typeof f5 = f3;
        const g54: typeof f5 = f4;
        const g56: typeof f5 = f6;
        const g57: typeof f5 = f7;
        const g58: typeof f5 = f8;
    
        const g61: typeof f6 = f1;  // FIXME
        const g62: typeof f6 = f2;
        const g63: typeof f6 = f3;  // FIXME
        const g64: typeof f6 = f4;
        const g65: typeof f6 = f5;  // FIXME
        const g67: typeof f6 = f7;  // FIXME
        const g68: typeof f6 = f8;
    
        const g71: typeof f7 = f1;  // FIXME
        const g72: typeof f7 = f2;  // FIXME
        const g73: typeof f7 = f3;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
        const g74: typeof f7 = f4;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T>'.
        const g75: typeof f7 = f5;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
        const g76: typeof f7 = f6;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T>'.
        const g78: typeof f7 = f8;
    
        const g81: typeof f8 = f1;  // FIXME
        const g82: typeof f8 = f2;  // FIXME
        const g83: typeof f8 = f3;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g84: typeof f8 = f4;
              ~~~
!!! error TS2322: Type '<T>() => IdMapped<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'IdMapped<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g85: typeof f8 = f5;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g86: typeof f8 = f6;
              ~~~
!!! error TS2322: Type '<T>() => Partial<T!>' is not assignable to type '<T>() => StrictMembers<T!>'.
!!! error TS2322:   Type 'Partial<{}>' is not assignable to type 'StrictMembers<T!>'.
        const g87: typeof f8 = f7;  // FIXME
    }
    
    type A<T>    = { a: T }
    type OptA<T> = { a: T | null }
    
    function knownTypes(
        a:          A<number>,
        optA:       OptA<number>,
        bangA:      A<number>!,
        bangOptA:   OptA<number>!,
        strictA:    StrictMembers<A<number>>,
        strictOptA: StrictMembers<OptA<number>>
    ) {
        const a1: A<number> = a;
        const a2: A<number> = optA;
              ~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const a3: A<number> = bangA;
        const a4: A<number> = bangOptA;
              ~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
        const a5: A<number> = strictA;
        const a6: A<number> = strictOptA;
    
        const oa1: OptA<number> = a;
        const oa2: OptA<number> = optA;
        const oa3: OptA<number> = bangA;
        const oa4: OptA<number> = bangOptA;
        const oa5: OptA<number> = strictA;
        const oa6: OptA<number> = strictOptA;
    
        const ba1: A<number>! = a;
        const ba2: A<number>! = optA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
        const ba3: A<number>! = bangA;
        const ba4: A<number>! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'A<number>'.
        const ba5: A<number>! = strictA;
        const ba6: A<number>! = strictOptA;
    
        const boa1: OptA<number>! = a;
        const boa2: OptA<number>! = optA;
        const boa3: OptA<number>! = bangA;
        const boa4: OptA<number>! = bangOptA;
        const boa5: OptA<number>! = strictA;
        const boa6: OptA<number>! = strictOptA;
    
        const sa1: StrictMembers<A<number>> = a;
        const sa2: StrictMembers<A<number>> = optA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const sa3: StrictMembers<A<number>> = bangA;
        const sa4: StrictMembers<A<number>> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<A<number>>'.
        const sa5: StrictMembers<A<number>> = strictA;
        const sa6: StrictMembers<A<number>> = strictOptA;
    
        const soa1: StrictMembers<OptA<number>> = a;
        const soa2: StrictMembers<OptA<number>> = optA;
              ~~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'number | null' is not assignable to type 'number'.
!!! error TS2322:       Type 'null' is not assignable to type 'number'.
        const soa3: StrictMembers<OptA<number>> = bangA;
        const soa4: StrictMembers<OptA<number>> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA<number>' is not assignable to type 'StrictMembers<OptA<number>>'.
        const soa5: StrictMembers<OptA<number>> = strictA;
        const soa6: StrictMembers<OptA<number>> = strictOptA;
    }
    
    function unknownTypes<T>(
        a:          A<T>,
        optA:       OptA<T>,
        bangA:      A<T>!,
        bangOptA:   OptA<T>!,
        strictA:    StrictMembers<A<T>>,
        strictOptA: StrictMembers<OptA<T>>
    ) {
        const a1: A<T> = a;
        const a2: A<T> = optA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T'.
!!! error TS2322:       Type 'null' is not assignable to type 'T'.
        const a3: A<T> = bangA;
        const a4: A<T> = bangOptA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const a5: A<T> = strictA;
        const a6: A<T> = strictOptA;
    
        const oa1: OptA<T> = a;
        const oa2: OptA<T> = optA;
        const oa3: OptA<T> = bangA;
        const oa4: OptA<T> = bangOptA;
        const oa5: OptA<T> = strictA;
        const oa6: OptA<T> = strictOptA;
    
        const ba1: A<T>! = a;
        const ba2: A<T>! = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba3: A<T>! = bangA;
        const ba4: A<T>! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba5: A<T>! = strictA;
        const ba6: A<T>! = strictOptA;
    
        const boa1: OptA<T>! = a;
        const boa2: OptA<T>! = optA;
        const boa3: OptA<T>! = bangA;
        const boa4: OptA<T>! = bangOptA;
        const boa5: OptA<T>! = strictA;
        const boa6: OptA<T>! = strictOptA;
    
        const sa1: StrictMembers<A<T>> = a;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
        const sa2: StrictMembers<A<T>> = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const sa3: StrictMembers<A<T>> = bangA;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa4: StrictMembers<A<T>> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa5: StrictMembers<A<T>> = strictA;
        const sa6: StrictMembers<A<T>> = strictOptA;
    
        const soa1: StrictMembers<OptA<T>> = a;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
        const soa2: StrictMembers<OptA<T>> = optA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const soa3: StrictMembers<OptA<T>> = bangA;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa4: StrictMembers<OptA<T>> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa5: StrictMembers<OptA<T>> = strictA;
        const soa6: StrictMembers<OptA<T>> = strictOptA;
    }
    
    function extendsTypes<T extends number>(
        a:          A<T>,
        optA:       OptA<T>,
        bangA:      A<T>!,
        bangOptA:   OptA<T>!,
        strictA:    StrictMembers<A<T>>,
        strictOptA: StrictMembers<OptA<T>>
    ) {
        const a1: A<T> = a;
        const a2: A<T> = optA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T'.
!!! error TS2322:       Type 'null' is not assignable to type 'T'.
        const a3: A<T> = bangA;
        const a4: A<T> = bangOptA;
              ~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const a5: A<T> = strictA;
        const a6: A<T> = strictOptA;
    
        const oa1: OptA<T> = a;
        const oa2: OptA<T> = optA;
        const oa3: OptA<T> = bangA;
        const oa4: OptA<T> = bangOptA;
        const oa5: OptA<T> = strictA;
        const oa6: OptA<T> = strictOptA;
    
        const ba1: A<T>! = a;
        const ba2: A<T>! = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba3: A<T>! = bangA;
        const ba4: A<T>! = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'A<T>'.
        const ba5: A<T>! = strictA;
        const ba6: A<T>! = strictOptA;
    
        const boa1: OptA<T>! = a;
        const boa2: OptA<T>! = optA;
        const boa3: OptA<T>! = bangA;
        const boa4: OptA<T>! = bangOptA;
        const boa5: OptA<T>! = strictA;
        const boa6: OptA<T>! = strictOptA;
    
        const sa1: StrictMembers<A<T>> = a;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
!!! error TS2322:       Type 'number' is not assignable to type 'T!'.
        const sa2: StrictMembers<A<T>> = optA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const sa3: StrictMembers<A<T>> = bangA;
              ~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa4: StrictMembers<A<T>> = bangOptA;
              ~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<A<T>>'.
        const sa5: StrictMembers<A<T>> = strictA;
        const sa6: StrictMembers<A<T>> = strictOptA;
    
        const soa1: StrictMembers<OptA<T>> = a;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T' is not assignable to type 'T!'.
!!! error TS2322:       Type 'number' is not assignable to type 'T!'.
        const soa2: StrictMembers<OptA<T>> = optA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
!!! error TS2322:   Types of property 'a' are incompatible.
!!! error TS2322:     Type 'T | null' is not assignable to type 'T!'.
!!! error TS2322:       Type 'null' is not assignable to type 'T!'.
        const soa3: StrictMembers<OptA<T>> = bangA;
              ~~~~
!!! error TS2322: Type 'A<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa4: StrictMembers<OptA<T>> = bangOptA;
              ~~~~
!!! error TS2322: Type 'OptA<T>' is not assignable to type 'StrictMembers<OptA<T>>'.
        const soa5: StrictMembers<OptA<T>> = strictA;
        const soa6: StrictMembers<OptA<T>> = strictOptA;
    }
    